add project resources

--- a/src/Hackathon_CV_Portal.Web/appsettings.Development.json
+++ b/src/Hackathon_CV_Portal.Web/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "HackathonCvPortalContextConnection": "Server=localhost;Database=HackathonCvPortal;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
