--- a/src/Hackathon_CV_Portal.Web/Hackathon_CV_Portal.Web.csproj
+++ b/src/Hackathon_CV_Portal.Web/Hackathon_CV_Portal.Web.csproj
@@ -7,7 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.7" />
+    <PackageReference Include="Serilog" Version="2.11.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Hackathon_CV_Portal.Application\Hackathon_CV_Portal.Application.csproj" />
+    <ProjectReference Include="..\Hackathon_CV_Portal.Persistence\Hackathon_CV_Portal.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
