add identity user

--- a/src/Hackathon_CV_Portal.Application/Hackathon_CV_Portal.Application.csproj
+++ b/src/Hackathon_CV_Portal.Application/Hackathon_CV_Portal.Application.csproj
@@ -14,6 +14,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Hackathon_CV_Portal.Persistence\Hackathon_CV_Portal.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
