--- a/src/Hackathon_CV_Portal.Persistence/Hackathon_CV_Portal.Persistence.csproj
+++ b/src/Hackathon_CV_Portal.Persistence/Hackathon_CV_Portal.Persistence.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Folder Include="Configuration\" />
+    <Folder Include="Migrations\" />
     <Folder Include="Seed\" />
   </ItemGroup>
 
@@ -15,6 +16,19 @@
     <PackageReference Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Hackathon_CV_Portal.Domain\Hackathon_CV_Portal.Domain.csproj" />
   </ItemGroup>
 
 </Project>
