--- a/src/Hackathon_CV_Portal.Domain/Hackathon_CV_Portal.Domain.csproj
+++ b/src/Hackathon_CV_Portal.Domain/Hackathon_CV_Portal.Domain.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.7" />
+  </ItemGroup>
+
 </Project>
