--- a/src/Hackathon_CV_Portal.Web/Hackathon_CV_Portal.Web.csproj
+++ b/src/Hackathon_CV_Portal.Web/Hackathon_CV_Portal.Web.csproj
@@ -7,13 +7,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.7" />
     <PackageReference Include="Serilog" Version="2.11.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Hackathon_CV_Portal.Application\Hackathon_CV_Portal.Application.csproj" />
+    <ProjectReference Include="..\Hackathon_CV_Portal.Data\Hackathon_CV_Portal.Data.csproj" />
+    <ProjectReference Include="..\Hackathon_CV_Portal.Domain\Hackathon_CV_Portal.Domain.csproj" />
     <ProjectReference Include="..\Hackathon_CV_Portal.Persistence\Hackathon_CV_Portal.Persistence.csproj" />
   </ItemGroup>
 
