--- a/src/Hackathon_CV_Portal.Web/appsettings.json
+++ b/src/Hackathon_CV_Portal.Web/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "HackathonCvPortalContextConnection": "Server=localhost;Database=HackathonCvPortal;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "HackathonCvPortalContextConnection": "Server=RTKHILAISHVILi;Database=cvportal;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*"
 }
