--- a/src/Hackathon_CV_Portal.Application/Hackathon_CV_Portal.Application.csproj
+++ b/src/Hackathon_CV_Portal.Application/Hackathon_CV_Portal.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Implementations\Cv\Models\CvModel" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Mapster" Version="7.3.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
