--- a/src/Hackathon_CV_Portal.Web/appsettings.json
+++ b/src/Hackathon_CV_Portal.Web/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "HackathonCvPortalContextConnection": "Server=tcp:etickets-application-server.database.windows.net,1433;Initial Catalog=cvportal-app-db;Persist Security Info=False;User ID=etickets-admin;Password=Coding_123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "HackathonCvPortalContextConnection": "Server=localhost;Database=HackathonCvPortal;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*"
 }
