--- a/src/Hackathon_CV_Portal.Web/Hackathon_CV_Portal.Web.csproj
+++ b/src/Hackathon_CV_Portal.Web/Hackathon_CV_Portal.Web.csproj
@@ -48,6 +48,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Serilog" Version="2.11.0" />
   </ItemGroup>
 
