--- a/src/Hackathon_CV_Portal.Web/Hackathon_CV_Portal.Web.csproj
+++ b/src/Hackathon_CV_Portal.Web/Hackathon_CV_Portal.Web.csproj
@@ -52,7 +52,9 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="6.0.0" />
     <PackageReference Include="Serilog" Version="2.11.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
