--- a/src/Hackathon_CV_Portal.Web/appsettings.json
+++ b/src/Hackathon_CV_Portal.Web/appsettings.json
@@ -6,7 +6,9 @@
     }
   },
   "ConnectionStrings": {
-    "HackathonCvPortalContextConnection": "Server=tcp:mberrishserver.database.windows.net,1433;Initial Catalog=cvplatform;Persist Security Info=False;User ID=mberrish;Password=Mini12122002.;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "HackathonCvPortalContextConnection": "Server=localhost;Database=HackathonCvPortal;Trusted_Connection=True;MultipleActiveResultSets=true",
+
+    //"HackathonCvPortalContextConnection": "Server=tcp:mberrishserver.database.windows.net,1433;Initial Catalog=cvplatform;Persist Security Info=False;User ID=mberrish;Password=Mini12122002.;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 
     //"HackathonCvPortalContextConnection": "Server=localhost;Database=HackathonCvPortal;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
