--- a/src/Hackathon_CV_Portal.Web/appsettings.Development.json
+++ b/src/Hackathon_CV_Portal.Web/appsettings.Development.json
@@ -8,5 +8,18 @@
   "ConnectionStrings": {
     "HackathonCvPortalContextConnection": "Server=localhost;Database=HackathonCvPortal;Trusted_Connection=True;MultipleActiveResultSets=true"
     //"HackathonCvPortalContextConnection": "Server=tcp:mberrishserver.database.windows.net,1433;Initial Catalog=cvplatform;Persist Security Info=False;User ID=mberrish;Password=Mini12122002.;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+
+  "EmailSettings": {
+    "FromName": "Your name",
+    "FromAddress": "cvportaltest@gmail.com",
+    "ToEmail": "",
+    "CcEmail": "",
+    "BccEmail": "",
+    "ServerAddress": "smtp.gmail.com",
+    "ServerPort": 587,
+    "ServerUseSsl": true,
+    "Username": "",
+    "Password": ""
   }
 }
