--- a/src/Hackathon_CV_Portal.Application/Hackathon_CV_Portal.Application.csproj
+++ b/src/Hackathon_CV_Portal.Application/Hackathon_CV_Portal.Application.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.7" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
+    <PackageReference Include="ServiceStack" Version="6.2.0" />
     <PackageReference Include="System.Linq.Expressions" Version="4.3.0" />
   </ItemGroup>
 
