--- a/src/Hackathon_CV_Portal.Web/appsettings.json
+++ b/src/Hackathon_CV_Portal.Web/appsettings.json
@@ -14,8 +14,8 @@
   },
 
   "EmailSettings": {
-    "FromName": "Your name",
-    "FromAddress": "you@gmail.com",
+    "FromName": "",
+    "FromAddress": "",
     "ToEmail": "",
     "CcEmail": "",
     "BccEmail": "",
@@ -25,5 +25,17 @@
     "Username": "",
     "Password": ""
   },
+
+  "Authentication": {
+    "Google": {
+      "ClientId": "524415294669-l95guv1cjub05b2l1ch69gi489ov7qs0.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    },
+    "Facebook": {
+      "AppId": "5200396753361807",
+      "AppSecret": "911a1db53c1347e758842045a5e1a852"
+    }
+  },
+
   "AllowedHosts": "*"
 }
