--- a/src/Hackathon_CV_Portal.Web/Hackathon_CV_Portal.Web.csproj
+++ b/src/Hackathon_CV_Portal.Web/Hackathon_CV_Portal.Web.csproj
@@ -56,6 +56,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="6.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.7" />
     <PackageReference Include="Serilog" Version="2.11.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.0.0" />
   </ItemGroup>
