--- a/src/Hackathon_CV_Portal.Web/appsettings.json
+++ b/src/Hackathon_CV_Portal.Web/appsettings.json
@@ -14,11 +14,9 @@
   },
 
   "EmailSettings": {
-    "FromName": "",
-    "FromAddress": "cvplatformdev@gmail.com",
-    "ToEmail": "",
-    "CcEmail": "",
-    "BccEmail": "",
+    "FromName": "Cv Platform",
+    "PlatformMailAddress": "cvplatformdev@gmail.com",
+    "ContactUsMailAddress": "CvPlatformContactUs@gmail.com",
     "ServerAddress": "smtp-relay.sendinblue.com",
     "ServerPort": 587,
     "ServerUseSsl": true,
