--- a/.github/workflows/hackatoncvportal.yml
+++ b/.github/workflows/hackatoncvportal.yml
@@ -1,4 +1,4 @@
-name: Build and deploy .NET Core app to Windows WebApp hackatoncvportal
+name: Test Env Build and deploy
 on:
   push:
     branches:
